# miemie_helper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.bat  install.py  launcher.py  main.py  pyproject.toml  skills-lock.json  start.bat  start.command  start.py
.claude/: settings.json
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
.github/workflows/: ci.yml  windows-package.yml
.miemie_data/db/: documents.db-shm  documents.db-wal
docs/harness/: design-context.md  evals.md  execution-plans.md  repo-map.md  standards.md  verification.md
docs/plans/: 2026-03-14-design-context.md  2026-03-14-frontend-remediation-program.md  2026-03-14-nextjs-migration.md  2026-03-14-remove-archive-and-mui-foundation.md  2026-03-14-remove-claude-md.md  2026-03-14-startup-fix-and-launcher.md  2026-03-15-windows-packaging-and-libreoffice-warning.md
evals/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/app/: globals.css  layout.tsx
frontend/src/: App.tsx  index.css
packaging/: windows.spec
scripts/: analyze_filenames.py
src/: config.py  runtime_capabilities.py
src/api/: archive_routes.py  export_routes.py  index_routes.py  search_routes.py  system_routes.py
src/core/: excel_exporter.py  extractor.py  file_scanner.py  parser.py  text_utils.py
src/doc_archive/: extractor.py  main.py  parser.py
src/search/: document_db.py  embedding.py  fulltext_store.py  indexer.py  models.py  (+1 more)
tests/: test_text_utils.py
(+22 files in other folders)
