[project]
name = "miemie-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "gradio>=6.6.0",
    "jieba>=0.42.1",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.2.3",
]
