[project]
name = "miemie-helper"
version = "0.1.0"
description = "文档归档和搜索系统，支持全文检索和向量检索"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.2",
    "fastembed",
    "filelock>=3.12",
    "jieba>=0.42.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-docx>=1.2.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[tool.uv]
# fastembed==0.7.4 declares pillow<12.0, but it only uses pillow for image models,
# not text embeddings. The constraint is overly conservative and conflicts with
# rapidocr-onnxruntime which needs pillow 12+. Override to allow any pillow>=11.
override-dependencies = [
    "pillow>=11.0.0",
]
